<?xml version="1.0" encoding="utf-8"?>
<TableLayout android:id="@+id/num_pad"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    style="@style/num_pad_padding" >

    <TableRow
        android:layout_width="fill_parent" >
        <TextView
            android:text="@string/symbol_seven"
            style="@style/numPadNumber" />
        <TextView
            android:text="@string/symbol_eight"
            style="@style/numPadNumber" />
        <TextView
            android:text="@string/symbol_nine"
            style="@style/numPadNumber" />
        <TextView
            android:text="@string/symbol_divide"
            style="@style/numPadNumber" />
    </TableRow>


    <TableRow>
        <TextView
            android:text="@string/symbol_four"
            style="@style/numPadNumber" />
        <TextView
            android:text="@string/symbol_five"
            style="@style/numPadNumber" />
        <TextView
            android:text="@string/symbol_six"
            style="@style/numPadNumber" />
        <TextView
            android:text="@string/symbol_times"
            style="@style/numPadNumber" />
    </TableRow>


    <TableRow>
        <TextView
            android:text="@string/symbol_one"
            style="@style/numPadNumber" />
        <TextView
            android:text="@string/symbol_two"
            style="@style/numPadNumber" />
        <TextView
            android:text="@string/symbol_three"
            style="@style/numPadNumber" />

        <TextView
            android:text="@string/symbol_minus"
            style="@style/numPadNumber" />
    </TableRow>


    <TableRow>
        <TextView
            android:text="@string/symbol_dot"
            style="@style/numPadNumber" />
        <TextView
            android:text="@string/symbol_zero"
            style="@style/numPadNumber" />
        <TextView
            android:text="@string/symbol_equals"
            style="@style/numPadNumber"
            android:onClick="equalsPress" />
        <TextView
            android:text="@string/symbol_plus"
            style="@style/numPadNumber" />
    </TableRow>


</TableLayout>