<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimaryDark"
    style="@style/extended_pad_padding"  >

    <TableRow
        android:layout_width="fill_parent" >
        <TextView
            android:text="@string/symbol_pi"
            style="@style/numPadNumber" />
        <TextView
            android:text="@string/symbol_e"
            style="@style/numPadNumber" />
        <TextView
            android:text="@string/symbol_percent"
            style="@style/numPadNumber" />
        <TextView
            android:text="@string/symbol_faculty"
            style="@style/numPadNumber" />
    </TableRow>


    <TableRow>
        <TextView
            android:text="@string/symbol_sin"
            style="@style/numPadNumber"
            android:textSize="32sp" />
        <TextView
            android:text="@string/symbol_mod"
            style="@style/numPadNumber"
            android:textSize="32sp" />
        <TextView
            android:text="@string/symbol_abs"
            style="@style/numPadNumber" />
        <TextView
            android:text="@string/symbol_exponent"
            style="@style/numPadNumber" />
    </TableRow>


    <TableRow>
        <TextView
            android:text="@string/symbol_cos"
            style="@style/numPadNumber"
            android:textSize="32sp" />
        <TextView
            android:text="@string/symbol_log"
            style="@style/numPadNumber"
            android:textSize="32sp" />
        <TextView
            android:text="@string/symbol_ln"
            style="@style/numPadNumber"
            android:textSize="32sp" />

        <TextView
            android:text="@string/symbol_sqrt"
            style="@style/numPadNumber" />
    </TableRow>


    <TableRow>
        <TextView
            android:text="@string/symbol_tan"
            style="@style/numPadNumber"
            android:textSize="32sp" />
        <TextView
            android:text="@string/symbol_starParentheses"
            style="@style/numPadNumber" />
        <TextView
            android:text="@string/symbol_endParentheses"
            style="@style/numPadNumber" />
        <TextView
            android:text="@string/symbol_x"
            style="@style/numPadNumber" />
    </TableRow>


</TableLayout>